--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
+import net.darkhax.curseforgegradle.TaskPublishCurseForge
+
 plugins {
     id 'eclipse'
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.darkhax.curseforgegradle' version '1.0.11'
+
 }
 
 version = '0.0.1'
@@ -183,4 +187,16 @@ publishing {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+}
+task publishCurseForge(type: TaskPublishCurseForge) {
+
+    apiToken = findProperty('curse_forge_api_token')
+
+    // The main file to upload
+    def mainFile = upload(686211, jar)
+    mainFile.releaseType = 'release'
+    mainFile.changelog = "${changelog}"
+    mainFile.changelogType = 'markdown'
+    mainFile.addJavaVersion('Java 17')
+    mainFile.addModLoader('Forge')
 }
