--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="broglisowls" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="0.0.2" #mandatory
+version="0.0.3" #mandatory
  # A display name for the mod
 displayName="Broglis Owls" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -44,7 +44,7 @@ authors="Brogli" #optional
 description='''
 A mod that adds owls to the world of Minecraft!
 
-Special thanks to AbsolemJackdaw for general code clean up, and AzureDoom for fixing the licensing.
+Special thanks to AbsolemJackdaw for general clean up, and AzureDoom for fixing the licensing.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.broglisowls]] #optional
